--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.1",
+    "numpy>=2.2.5",
     "pandas>=2.2.3",
+    "scipy>=1.15.2",
     "seaborn>=0.13.2",
 ]
