--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "z-score-binomial-distribution"
 version = "0.1.0"
-description = "Add your description here"
+description = "Estudo sobre Z-Score e Distribuição Binomial"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
